# rust_os

./: Cargo.toml  README.md
.cargo/: config.toml
doc/: 0 Get Started.md  0.html  1 Text Buffer.md
src/: main.rs  vga_buffer.rs
