[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Disable stack unwinding on panic
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
# bootloader = "0.11.3"
bootloader = "0.9.23"
# to use the Port type
x86_64 = "0.14.2"
# initialize the UART and send data over the serial port
uart_16550 = "0.2.0"

# To quit QEMU automatically when tests are done
[package.metadata.bootimage]
# To see the serial output from QEMU
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
# (0x10 << 1) | 1
test-success-exit-code = 33
test-timeout = 300 # in seconds